--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/Data
+/Data/BPI Challenge 2017
+/Data/BPI Challenge 2016_ Questions_1_all
+/Data/BPI_Challenge_2019/BPI_Challenge_2019.xes
+/Data/BPIC15_1/BPIC15_1.xes
+/Algorithm/config.py
