Added EventLog class and functions that build a process activity graph

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /Data/BPI Challenge 2017
 /Data/BPI Challenge 2016_ Questions_1_all
+/Data/BPI_Challenge_2019/BPI_Challenge_2019.csv
 /Data/BPI_Challenge_2019/BPI_Challenge_2019.xes
 /Data/BPIC15_1/BPIC15_1.xes
-/Algorithm/config.py
+/Data/BPIC15_1/BPIC15_1.csv
