add class LogSplitter, some changes in notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/Data/BPI Challenge 2017
+/Data/BPI Challenge 2017.xes
+/Data/BPI Challenge 2017.csv
 /Data/BPI Challenge 2016_ Questions_1_all
 /Data/BPI_Challenge_2019/BPI_Challenge_2019.csv
 /Data/BPI_Challenge_2019/BPI_Challenge_2019.xes
