отладка класса SplitLogs + тестирование

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-/Data/BPI Challenge 2017.xes
-/Data/BPI Challenge 2017.csv
+/Data/BPI Challenge 2017/BPI Challenge 2017.xes
+/Data/BPI Challenge 2017/BPI Challenge 2017.csv
+/Data/BPI Challenge 2017/split_event_logs/0.csv
+/Data/BPI Challenge 2017/split_event_logs/1.csv
 /Data/BPI Challenge 2016_ Questions_1_all
 /Data/BPI_Challenge_2019/BPI_Challenge_2019.csv
 /Data/BPI_Challenge_2019/BPI_Challenge_2019.xes
